refactor: Reestructuración del flujo completo e integración Client